fixed layout issues

--- a/assets/styles/common/_typo.scss
+++ b/assets/styles/common/_typo.scss
@@ -86,6 +86,12 @@
   }
 }
 
+.section-subtitle {
+  font-size: 24px;
+  font-weight: 300;
+  color: $black;
+}
+
 .page-title,
 .section-title {
   .featured {
