--- a/assets/styles/partials/_feature-section.scss
+++ b/assets/styles/partials/_feature-section.scss
@@ -42,6 +42,8 @@
 
   &.unified {
     .section-title {
+      margin-bottom: 40px;
+
       .featured {
         position: relative;
 
