--- a/assets/styles/partials/_roadmap-section.scss
+++ b/assets/styles/partials/_roadmap-section.scss
@@ -115,7 +115,7 @@
         font-weight: 700;
 
         @include media-breakpoint-up(sm) {
-          font-size: 62px;
+          font-size: 50px;
           line-height: 56px;
         }
 
