--- a/assets/styles/partials/_techstack-section.scss
+++ b/assets/styles/partials/_techstack-section.scss
@@ -21,7 +21,29 @@
     }
   }
   .thechstack-wrapper {
-    min-height: 100vh;
+    @include media-breakpoint-up(lg) {
+      min-height: 700px;
+    }
+
+    @include media-breakpoint-only(md) {
+      min-height: 660px;
+    }
+
+    @include media-breakpoint-only(sm) {
+      min-height: 630px;
+    }
+
+    @media (min-width: 400px) and (max-width: 767px) {
+      min-height: 600px;
+    }
+
+    @media (max-width: 399px) {
+      min-height: 520px;
+    }
+
+    @include media-breakpoint-down(xs) {
+      //min-height: 630px;
+    }
   }
   &.fixed {
     .thechstack-wrapper {
@@ -38,24 +60,44 @@
       width: 100%;
     }
   }
-
   .tech-stack-menu-header {
     font-size: 20px;
   }
-
   @media (max-width: 320px) {
     padding: 30px 0 30px 0;
   }
-
-
   .hero-title {
     margin-bottom: 50px;
   }
-
   .techstack {
     position: relative;
     width: 100%;
     height: 60vh;
+
+    @include media-breakpoint-up(lg) {
+      height: 520px;
+    }
+
+    @include media-breakpoint-only(md) {
+      height: 520px;
+    }
+
+    @include media-breakpoint-only(sm) {
+      height: 520px;
+    }
+
+    @media (min-width: 400px) and (max-width: 767px) {
+      height: 400px;
+    }
+
+    @media (max-width: 399px) {
+      height: 350px;
+    }
+
+    @include media-breakpoint-down(xs) {
+      //height: 630px;
+    }
+
     .level {
       display: inline-block;
       width: 25%;
